--- a/report/appendix1.tex
+++ b/report/appendix1.tex
@@ -1,40 +1,60 @@
-\chapter{Example of operation}
+\chapter{Summary}
 
-An appendix is just like any other chapter, except that it comes after
-the appendix command in the master file.
+\small
+\begin{center}
+\begin{tabular}{| p{4cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
+\hline
+Operation  & Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time   \\
+\hline 
+CPU & & & & \\
+\hline
+Reading time & 9 cycles & 8 cycles & 17 cycles & 19 cycles \\
+Loop overhead & 2 cycles& 3 cycles& 5 cycles& 5 cycles\\
+System call & 200 cycles& 10 cycles& 210 cycles& 297 cycles \\
+Task creation : process & 2000 cycles& 200 cycles& 2200 cycles& 181932 cycles \\
+Task creation : kernel thread    & 200 cycles& 50 cycles& 250 cycles& 16509 cycles\\
+Context switch : process & 20000 cycles& 5000 cycles& 25000 cycles& 133221  cycles\\
+Context switch : kernel thread    & 2000 cycles& 500 cycles& 2500 cycles& 9752 cycles\\
+\hline 
+Memory & & & & \\
+\hline
+RAM Access Time : L1 Cache (64KB) &  5 cycles& 2 cycles& 7 cycles& 1.116605 cycles \\
+RAM Access Time : L2 Cache (256KB) & 14 cycles& 4 cycles& 18cycles &  1.151352 cycles\\
+RAM Access Time : L3 Cache (6MB) & 20 cycles& 8 cycles& 28 cycles& 20.772894 cycles\\
+RAM Access Time : Main Memory (8G) & 40 cycles& 10 cycles& 50 cycles&  57.635278 cycles\\
+RAM Read Bandwidth & & & 1200MB/s & 1226MB/s \\
+RAM Write Bandwidth & & & 1200MB/s & 1520MB/s \\
+Page Fault Service Time & 8384 cycles& 100 cycles& 8484 cycles& 9898 cycles\\
+\end{tabular}
+\end{center}
 
-One use of an appendix is to include an example of input to the system
-and the corresponding output.
 
-One way to do this is to include, unformatted, an existing input file. 
-You can do this using \verb=\verbatiminput=. In this appendix we
-include a copy of the C file \textsf{hello.c} and its output file
-\textsf{hello.out}. If you use this facility you should make sure that
-the file which you input does not contain \texttt{TAB} characters,
-since \LaTeX\ treats each \texttt{TAB} as a single space; you can use
-the Unix command \texttt{expand} (see manual page) to expand tabs into
-the appropriate number of spaces. 
 
-\section{Example input and output}
-\label{sec:inp-eg}
-\subsection{Input}
-\label{sec:input}
-(Actually, this isn't input, it's the source code, but it will do as
-an example)
+\small
+\begin{center}
+\begin{tabular}{| p{4cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
 
-\verbatiminput{hello.c}
+\hline 
+Network & & & & \\
+\hline
+Loopback RTT & 20000 cycles& 5000 cycles& 25000 cycles& 69882 cycles\\
+Remote RTT & 100000 cycles& 10000 cycles& 110000 cycles& 627772 cycles\\
+Loopback Peak Bandwidth & & & 1600 MB/s & 1540 MB/s \\
+Remote Peak Bandwidth & & &  125 MB/s  & 133 MB/s\\
+Loopback Connection Setup & 35000 cycles& 5000 cycles& 40000 cycles& 306665 cycles \\
+Loopback Connection Tear-down & 20000 cycles& 3000 cycles& 23000 cycles& 54334 cycles \\
+Remote Connection Setup & 300000  cycles& 30000 cycles& 330000 cycles& 622923 cycles\\
+Remote Connection Tear-down & 150000  cycles& 15000 cycles& 165000 cycles& 141333 cycles\\
 
-\subsection{Output}
-\label{sec:output}
+\hline 
+File System& & & & \\
+\hline
+File Cache Size & & & 2GB & 3.3GB \\ 
+Sequential File Read Time Per Block& 19000 cycles & 1000 cycles& 20000 cycles& 300106 cycles\\
+Random File Read Time Per Block& 19000 cycles& 1000 cycles& 20000 cycles& 492654 cycles \\
+Sequential Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1089600 cycles\\
+Random Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1074543 cycles\\
+File Contention(15 processes) & 490000 cycles& 15000 cycles& 505000 cycles& 590147 cycles\\
 
-\verbatiminput{hello.out}
-\subsection{Another way to include code}
-You can also use the capabilities of the \texttt{listings} package to
-include sections of code, it does some keyword highlighting.
-
-\lstinputlisting[language=C]{hello.c}
-
-% Local Variables: 
-% mode: latex
-% TeX-master: "report"
-% End: 
+\end{tabular}
+\end{center}
