--- a/report/chapter1.tex
+++ b/report/chapter1.tex
@@ -3,7 +3,16 @@
 
 
 \section{Goal}
+In this project, we will create and apply a set of experiments to Mac OS to characterize and understand its performance. The experiments are based on four aspects : 
+\begin{enumerate}
+\item CPU, Scheduling, and OS Services
+\item Memory
+\item Network
+\item File System
+\end{enumerate}
 
+
+After the experiment, we will gain an intuitive feel for the relative speeds of different basic operations, which is invaluable in identifying performance bottlenecks.
 
 \section{Environment}
 
@@ -16,4 +25,20 @@ Thread model: posix
 \item Optimization settings : no optimization set
 \end{itemize}
 
-\section{Time spent}
+\section{Time Estimation}
+\begin{center}
+\begin{tabular}{| c | c |}
+\hline
+Job &  Estimated Time   \\
+
+\hline
+Machine Description Collection & 6 hours \\  \hline
+CPU, Scheduling, and OS Services Experiment & 15 hours \\  \hline
+Memory Experiment & 10 hours \\  \hline
+Network Experimentn & 10 hours \\  \hline
+File System Experiment & 12 hours \\  \hline
+Writing Report & 30 hours \\  \hline
+Total & 83 hours \\  \hline
+
+\end{tabular}
+\end{center}
