--- a/report/report.tex
+++ b/report/report.tex
@@ -69,7 +69,9 @@
 \author{
 		\normalfont 						\normalsize
         				Zhenchao Gan\\[-3pt]		\normalsize
-				\{zhgan\} @eng.ucsd.edu \\ \\
+				Di Huang\\[-3pt]		\normalsize
+        				Qiao Zhang\\[-3pt]				\normalsize
+				\{zhgan, dih024, qiz121\} @eng.ucsd.edu \\ \\
        		 \today
 }
 \date{}
@@ -91,9 +93,9 @@
 \include{chapter1}
 \include{chapter2}
 \include{chapter3}
-\include{chapter4}
-\include{chapter5}
-\include{chapter6}
+%\include{chapter4}
+%\include{chapter5}
+%\include{chapter6}
 
 \bibliography{refs}             % this causes the references to be
                                 % listed
@@ -102,6 +104,6 @@
                                 % the references are printed, other
                                 % possible values are plain and abbrv
 %% Appendices start here
-\appendix
-\include{appendix1}
+%\appendix
+%\include{appendix1}
 \end{document}
