--- a/report/chapter2.tex
+++ b/report/chapter2.tex
@@ -49,7 +49,7 @@ I get this information from system profiler and simply measure IO.
 \begin{itemize}
 \item Model : APPLE SSD SD256E
 \item Capacity : 251 GB
-\item RPM : 7200
+\item RPM : I think RPM is no meaning to SSD
 \item Controller Cache Size : 2 MB
 \item File System : Journaled HFS+
 \item Write Speed : 380 MB/s
