--- a/report/report.tex
+++ b/report/report.tex
@@ -68,9 +68,9 @@
 }
 \author{
 		\normalfont 						\normalsize
-        				Zhenchao Gan\\[-3pt]		\normalsize
-				Di Huang\\[-3pt]		\normalsize
-        				Qiao Zhang\\[-3pt]				\normalsize
+        				Zhenchao Gan  (PID : A53092819)\\[-3pt]		\normalsize
+				Di Huang (PID : A53081199)\\[-3pt]		\normalsize
+        				Qiao Zhang (PID : A53095965)\\[-3pt]				\normalsize
 				\{zhgan, dih024, qiz121\} @eng.ucsd.edu \\ \\
        		 \today
 }
@@ -93,7 +93,7 @@
 \include{chapter1}
 \include{chapter2}
 \include{chapter3}
-%\include{chapter4}
+\include{chapter4}
 %\include{chapter5}
 %\include{chapter6}
 
@@ -105,5 +105,5 @@
                                 % possible values are plain and abbrv
 %% Appendices start here
 %\appendix
-%\include{appendix1}
+\include{appendix1}
 \end{document}
