--- a/report/chapter2.tex
+++ b/report/chapter2.tex
@@ -9,7 +9,7 @@ sudo sysctl -a | grep cache
 
 \begin{itemize}
 \item Model : Intel Core i7
-\item Cycle time : 2.3 GHz
+\item Cycle time : 0.4347826086 ns
 \item L1 i-Cache : 32 KB
 \item L1 d-Cache : 32KB
 \item L2 Cache (per Core) : 256 KB
