--- a/report/refs.bib
+++ b/report/refs.bib
@@ -68,3 +68,21 @@
    howpublished = "\url{http://www.tex.ac.uk/cgi-bin/texfaq2html?label=citeURL}",
    year = 2012
 }
+
+
+@Book{task,
+  author = 	 "THOMAS E. ANDERSON, BRIAN N. BERSHAD, EDWARD D. LAZOWSKA, and HENRY M. LEVY",
+  title = 	 "Scheduler Activations: Effective Kernel Support for the User-Level Management of Parallelism",
+  publisher = 	 "SOSP",
+  year = 	 1991
+}
+
+@Book{ramacc,
+  author = 	 "Larry McVoy and Carl Staelin",
+  title = 	 "lmbench: Portable Tools for Performance Analysis",
+  publisher = 	 "Proc. of USENIX Annual Technical Conference",
+  year = 	 1996
+}
+
+
+
